[gd_scene load_steps=4 format=3 uid="uid://cnjlex6h0emxi"]

[ext_resource type="Script" path="res://controls.gd" id="1_xi8nj"]
[ext_resource type="FontFile" uid="uid://nl47vuv24jg1" path="res://images/test.fnt" id="2_epuea"]
[ext_resource type="Script" path="res://scripts/volume_slider.gd" id="3_c243b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xi8nj")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 54.0
offset_right = 1575.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("2_epuea")
theme_override_font_sizes/font_size = 80
allow_reselect = true
allow_search = false
item_count = 12
max_columns = 2
fixed_column_width = 500
item_0/text = "forward"
item_1/text = "w"
item_2/text = "Backward"
item_3/text = "s"
item_4/text = "left"
item_5/text = "a"
item_6/text = "right"
item_7/text = "d"
item_8/text = "jump"
item_9/text = "space"
item_10/text = "respawn"
item_11/text = "r"

[node name="apply" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 607.0
offset_right = 603.0
offset_bottom = 705.0
theme_override_fonts/font = ExtResource("2_epuea")
theme_override_font_sizes/font_size = 90
text = "apply"

[node name="cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 1309.0
offset_top = 611.0
offset_right = 1574.0
offset_bottom = 709.0
theme_override_fonts/font = ExtResource("2_epuea")
theme_override_font_sizes/font_size = 90
text = "cancel"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 607.0
offset_right = 844.0
offset_bottom = 709.0
theme_override_fonts/font = ExtResource("2_epuea")
theme_override_font_sizes/font_size = 90
text = "Back"

[node name="Master" type="HSlider" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 850.0
offset_right = 600.0
offset_bottom = 950.0
max_value = 1.0
step = 0.001
script = ExtResource("3_c243b")
bus_name = "Master"

[node name="Music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 850.0
offset_right = 1264.0
offset_bottom = 950.0
max_value = 1.0
step = 0.001
script = ExtResource("3_c243b")
bus_name = "Music"

[node name="Sfx" type="HSlider" parent="."]
layout_mode = 0
offset_left = 1375.0
offset_top = 847.0
offset_right = 1875.0
offset_bottom = 947.0
max_value = 1.0
step = 0.001
script = ExtResource("3_c243b")
bus_name = "Sfx"

[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
